tests/valid/replace/replace_twice_use_first_old.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let first: unrestricted isize = (replace x 10);
    let _: unrestricted isize = (replace x 20);
    first
}
