tests/invalid/struct/immutable_field_replace.facet
struct Slot {
  x: unrestricted isize
}

fn main() -> unrestricted () {
  let mut s: unrestricted Slot = Slot { x = 0 };
  let _: unrestricted isize = (replace s.x 1);
  ()
}
